# areas

./: CMakeLists.txt  README.md
src/: main.cpp  math.hpp  mesh.cpp  mesh.h  node.h  parse.cpp  parse.h  surface.h  triangle.cpp  triangle.h  vector3.cpp  vector3.h
